# chaum-pedersen-zkp

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  build.rs  docker-compose.yaml
.github/workflows/: ci.yml  security.yml
benches/: batch_verification.rs  proof_generation.rs  protocol_benchmarks.rs
config/: server.toml.example
docs/: protocol.md
examples/: auth_system.rs  batch_verification.rs  hello_world.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_proof_deserialization.rs  fuzz_statement_validation.rs
proto/: auth.proto  chaum_pedersen_auth.proto
src/: client.rs  error.rs  lib.rs  server.rs
src/crypto/: group.rs  mod.rs  rng.rs
src/groups/: mod.rs  rfc5114.rs  ristretto.rs
src/primitives/: gadgets.rs  mod.rs  ristretto.rs  rng.rs  transcript.rs
src/primitives/crypto/: field.rs  group.rs
src/primitives/groups/: p256.rs  rfc5114.rs  ristretto.rs
src/protocol/: gadgets.rs  mod.rs  prover.rs  transcript.rs  types.rs  verifier.rs
src/prover/: mod.rs
src/server/: config.rs  mod.rs  service.rs  state.rs
src/verifier/: batch.rs  config.rs  mod.rs  service.rs  state.rs
tests/: batch_verification_tests.rs  integration_tests.rs  property_tests.rs  security_tests.rs
tests/common/: mod.rs
