[package]
name = "chaum-pedersen-zkp"
version = "0.1.0"
edition = "2021"

[dependencies]
hex = "0.4"
num-bigint = { version = "0.4", features = ["rand"] }
prost = "0.12"
rand = "0.8"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tonic = "0.10"

[build-dependencies]
tonic-build = "0.10"
