[package]
name = "chaum-pedersen-zkp"
version = "1.0.0"
description = "Chaum-Pedersen zero-knowledge protocol implementation"
authors = ["Kobby Pentangeli <kobbypentangeli@gmail.com>"]
repository = "https://github.com/kobby-pentangeli/chaum-pedersen-zkp"
documentation = "https://docs.rs/chaum-pedersen-zkp"
homepage = "https://github.com/kobby-pentangeli/chaum-pedersen-zkp"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["zero-knowledge-proofs", "zkp", "pedersen"]
categories = ["cryptography"]
edition = "2024"
rust-version = "1.85"

[lib]
name = "chaum_pedersen"
path = "src/lib.rs"

[[bin]]
name = "server"
path = "src/bin/server.rs"
required-features = ["server"]

[[bin]]
name = "client"
path = "src/bin/client.rs"
required-features = ["client"]

[dependencies]
crypto-bigint = { version = "0.6", features = [
    "extra-sizes",
    "rand_core",
    "zeroize",
] }
curve25519-dalek = { version = "4", features = ["alloc", "zeroize", "serde"] }
merlin = "3.0"
zeroize = { version = "1.7", features = ["derive", "alloc"] }
subtle = "2.6"
rand_core = { version = "0.6", features = ["getrandom"] }
getrandom = "0.2"
sha2 = "0.10"
serde = { version = "1.0", features = ["derive"] }
postcard = { version = "1.0", features = ["alloc"] }
thiserror = "2.0"

tonic = { version = "0.12", optional = true }
prost = { version = "0.13", optional = true }
tokio = { version = "1", features = [
    "macros",
    "rt-multi-thread",
    "signal",
], optional = true }
tonic-health = { version = "0.12", optional = true }
tonic-reflection = { version = "0.12", optional = true }
tower = { version = "0.4", features = [
    "timeout",
    "limit",
    "load-shed",
], optional = true }

clap = { version = "4.5", features = ["derive", "env"], optional = true }
argon2 = { version = "0.5", optional = true }
figment = { version = "0.10", features = ["toml", "env"], optional = true }

tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
], optional = true }
metrics = { version = "0.24", optional = true }
metrics-exporter-prometheus = { version = "0.17", optional = true }
hex = { version = "0.4", optional = true }

[build-dependencies]
tonic-build = { version = "0.12", optional = true }
prost-build = { version = "0.13", optional = true }

[dev-dependencies]
proptest = "1.4"
criterion = { version = "0.7", features = ["html_reports"] }
tokio-test = "0.4"
tokio-stream = { version = "0.1", features = ["net"] }
hex = "0.4"

[features]
default = []
grpc = [
    "dep:tonic",
    "dep:prost",
    "dep:tokio",
    "dep:tonic-build",
    "dep:prost-build",
]
server = [
    "grpc",
    "dep:tonic-health",
    "dep:tonic-reflection",
    "dep:tower",
    "dep:tracing",
    "dep:tracing-subscriber",
    "dep:metrics",
    "dep:metrics-exporter-prometheus",
    "dep:figment",
    "dep:hex",
]
client = ["grpc", "dep:clap", "dep:argon2", "dep:figment"]

[[bench]]
name = "protocol_benchmarks"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
